# goit-pythonweb-hw-12

./: env.example  main.py  pyproject.toml  requirements.txt  test.db
docs/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 100bffe487a8_added_user_role.py  26ddc3f525f6_add_to_model_user_filed_confirmed.py  35c9fbe11c93_init.py  4d9d25c331c4_fix_users_table.py  7602a3880756_fix_users_table.py  e4a7ccd7f67f_update_contacts.py  e7d44a5f2489_added_user_role.py  ea5bd9a527dd_add_unique_constraint_on_first_name_.py  f51a64044e20_init.py  f70bd2d7a464_add_confirmed_field_to_user_model.py
src/api/: auth.py  contacts.py  users.py  utils.py
src/conf/: config.py  messages.py
src/configuration/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/schemas/: contacts.py  users.py
src/services/: auth.py  contacts.py  email.py  upload_file.py  users.py
src/services/templates/: reset_password.html  verify_email.html
tests/: conftest.py  test_integration_auth.py  test_integration_contacts.py  test_integration_email.py  test_integration_users.py  test_integration_utils.py  test_schemas_contacts.py
